Fixed home button being hidden behind

--- a/todo/src/app/app.component.css
+++ b/todo/src/app/app.component.css
@@ -23,7 +23,7 @@
 
 .logo
 {
-  z-index: 1;
+  z-index: 2;
   position: fixed;
   margin: 10px;
   top: 0;
